Move pinned posts back to header and make sure icon stay behind mobile nav

--- a/sundsvall_se-theme/assets/css/scss/partials/_site-navigation.scss
+++ b/sundsvall_se-theme/assets/css/scss/partials/_site-navigation.scss
@@ -10,6 +10,7 @@ body {
 .offcanvas {
 
 	@include media-breakpoint-down(sm) {
+		z-index: 2;
 		background: white;
 		position: fixed;
 		top: 0;
